nullaway_error_f0825782-411e-4045-bc02-86756419c154.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/ColorLayer.java:38: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.color;
    ^
    (see http://t.uber.com/nullaway )
